--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Facebook</title>
+    <link rel="favicon" src="Facebook_Logo_2023.ico">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <center>
+        <div class="div-sec">
+            <!-- FIrst Part -->
+            <div class="ad-1">
+                <img  src="Facebook_Logo_2023.ico">
+                <h2 style="color: rgb(24, 141, 219);"><b>facebook</b></h2>
+                <p>Connect With Friends and Family</p>
+            </div>
+            <!-- Second Part -->
+            <div class="sidebar">
+
+                <label for="email">Email:</label>
+                <input id="email" type="email" placeholder="Enter Email" class="inp"><br>
+                <label for="password">Password:</label>
+                <input id="password" type="password" placeholder="Enter Password" class="inp1">
+                <center>
+                    <button class="btn" onclick="Click()">login</button>
+                    <p>Forgot password?</p>
+                    <hr>
+                    <a href="newuser.html"><button>create new account</button></a>
+
+                </center>
+            </div>
+        </div>
+    </center>
+
+    <script src="index.js"></script>
+</body>
+
+</html>
