--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <center>
+<div>
+</div>
         <div class="div-sec">
             <!-- FIrst Part -->
             <div class="ad-1">
